@@ -20,7 +20,7 @@ public class GrpcServer {
   public static void main(String[] args) throws Exception {
     // Start Workers
     int workerNum = config.getAppTraceWorkerNum();
-    ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+    ExecutorService executorService = Executors.newFixedThreadPool(workerNum);
     for (int i = 0; i < workerNum; i++) {
       executorService.submit(new TraceWorker(i));
       log.info("Worker {} started", i);
